gcc/testsuite/gm2/iso/fail/badvar.mod
MODULE badvar ;

VAR
   foo: CARDINAL ;
BEGIN
   Foo := 1
END badvar.
